baml_language/crates/baml_lsp_actions_tests/test_files/syntax/functions_v2/duplicate_names.baml
function Bar {
  input string
  output string
}

function Bar(a: string, b: int | bool) -> int {
  client Bar
  prompt #"fa"#
}

// error: The function "Bar" cannot be re-defined because a function with that name already exists.
//   -->  functions_v2/duplicate_names.baml:1
//    |
//    |
//  1 | function Bar {
//    |
//   -->  functions_v2/duplicate_names.baml:6
//    |
//  5 |
//  6 | function Bar(a: string, b: int | bool) -> int {
//    |
// error: The function "Bar" cannot be re-defined because a function with that name already exists.
//   -->  functions_v2/duplicate_names.baml:6
//    |
//  5 |
//  6 | function Bar(a: string, b: int | bool) -> int {
//    |
//   -->  functions_v2/duplicate_names.baml:1
//    |
//    |
//  1 | function Bar {
//    |
// error: Invalid syntax for function "Bar". Use:
// function Bar(params...) -> ReturnType { ... }
//   -->  functions_v2/duplicate_names.baml:1
//    |
//    |
//  1 | function Bar {
//    |
// error: Error validating: Unknown field `input` in function
//   -->  functions_v2/duplicate_names.baml:2
//    |
//  1 | function Bar {
//  2 |   input string
//    |
// error: Error validating: Unknown field `output` in function
//   -->  functions_v2/duplicate_names.baml:3
//    |
//  2 |   input string
//  3 |   output string
//    |
// error: Error validating: Missing `prompt` and `client` fields in function. Add to the block:
// ```
// client GPT4
// prompt #"..."#
// ```
//   -->  functions_v2/duplicate_names.baml:1
//    |
//    |
//  1 | function Bar {
//    |

//----
//- diagnostics
// Error: Old-style function syntax. Use: function Name(params...) -> ReturnType { ... }
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:1:14 ]
//    в”Ӯ
//  1 в”Ӯ function Bar {
//    в”Ӯ              в”¬  
//    в”Ӯ              в•°в”Җв”Җ Old-style function syntax. Use: function Name(params...) -> ReturnType { ... }
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0010
// в”Җв”Җв”Җв•Ҝ
// Error: Duplicate function `Bar`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:1:10 ]
//    в”Ӯ
//  1 в”Ӯ function Bar {
//    в”Ӯ          в”Җв”¬в”Җ  
//    в”Ӯ           в•°в”Җв”Җв”Җ function `Bar` redefined here
//    в”Ӯ 
//  6 в”Ӯ function Bar(a: string, b: int | bool) -> int {
//    в”Ӯ          в”Җв”¬в”Җ  
//    в”Ӯ           в•°в”Җв”Җв”Җ `Bar` first defined in functions_v2_duplicate_names.baml
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0011
// в”Җв”Җв”Җв•Ҝ
// Error: Duplicate function `Bar`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:6:10 ]
//    в”Ӯ
//  6 в”Ӯ function Bar(a: string, b: int | bool) -> int {
//    в”Ӯ          в”Җв”¬в”Җ  
//    в”Ӯ           в•°в”Җв”Җв”Җ function `Bar` redefined here
//    в”Ӯ
//    в”ңв”Җ[ functions_v2_duplicate_names.baml:6:10 ]
//    в”Ӯ
//  1 в”Ӯ function Bar {
//    в”Ӯ          в”Җв”¬в”Җ  
//    в”Ӯ           в•°в”Җв”Җв”Җ `Bar` first defined in functions_v2_duplicate_names.baml
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0011
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `input`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:2:3 ]
//    в”Ӯ
//  2 в”Ӯ   input string
//    в”Ӯ   в”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ     в•°в”Җв”Җв”Җв”Җ Unknown variable `input`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `string`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:2:9 ]
//    в”Ӯ
//  2 в”Ӯ   input string
//    в”Ӯ         в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ            в•°в”Җв”Җв”Җв”Җ Unknown variable `string`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `output`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:3:3 ]
//    в”Ӯ
//  3 в”Ӯ   output string
//    в”Ӯ   в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ      в•°в”Җв”Җв”Җв”Җ Unknown variable `output`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `string`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:3:10 ]
//    в”Ӯ
//  3 в”Ӯ   output string
//    в”Ӯ          в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ             в•°в”Җв”Җв”Җв”Җ Unknown variable `string`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `input`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:2:3 ]
//    в”Ӯ
//  2 в”Ӯ   input string
//    в”Ӯ   в”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ     в•°в”Җв”Җв”Җв”Җ Unknown variable `input`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `string`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:2:9 ]
//    в”Ӯ
//  2 в”Ӯ   input string
//    в”Ӯ         в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ            в•°в”Җв”Җв”Җв”Җ Unknown variable `string`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `output`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:3:3 ]
//    в”Ӯ
//  3 в”Ӯ   output string
//    в”Ӯ   в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ      в•°в”Җв”Җв”Җв”Җ Unknown variable `output`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown variable `string`
//    в•ӯв”Җ[ functions_v2_duplicate_names.baml:3:10 ]
//    в”Ӯ
//  3 в”Ӯ   output string
//    в”Ӯ          в”Җв”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ             в•°в”Җв”Җв”Җв”Җ Unknown variable `string`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0003
// в”Җв”Җв”Җв•Ҝ
